# adk-usecases-with-gemini-and-ollama

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-agent-prompt-to-action-ollama/helpful_agent_ollama/: agent.py
01-agent-prompt-to-action/helpful-agent-gemini/: README.md  agent.py
01-agent-prompt-to-action/helpful_agent_gemini/: README.md  agent.py
01-agent-prompt-to-action/helpful_agent_ollama/: agent.py
02-agents-with-custom-tools/[in-progress] long-running-operations/: agent.py
02-agents-with-custom-tools/currency_agent/: README.md  agent.py
02-agents-with-custom-tools/currency_agent_with_reliability/: agent.py
02-multiagent/research-coordinator/: agent.py
02-multiagent/research_coordinator/: agent.py
02-multiagent/research_coordinator_configuration/: README.md
03-multiagent/research_coordinator_configuration/: agent.py
03-workflows-agents/loop-agent/: agent.py
03-workflows-agents/loop_agent/: README.md  agent.py
03-workflows-agents/parallel-agent/: README.md  agent.py
03-workflows-agents/sequential-agent/: README.md  agent.py
03-workflows-agents/sequential_agent/: README.md  agent.py
04-agents-to-agents-A2A/house_price_predictor_agent/: agent.py
04-agents-to-agents-A2A/hugging_agent/: agent.py
04-agents-with-custom-tools/currency-agent/: agent.py
04-agents-with-custom-tools/currency-agent-with-reliability/: README.md  agent.py
04-agents-with-custom-tools/model-context-protocol/: agent.py
05-agents-to-agents-A2A/products_catalog_agent/: agent.ipynb  agent.py
(+4 files in other folders)
